// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet Card should render 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj h-48"
      data-testid="Card"
    >
      <div
        class="flex relative flex-col justify-between p-4 h-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="-space-x-2 whitespace-nowrap"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <span
            class="font-semibold truncate text-theme-secondary-text"
          >
            ARK Wallet 1
          </span>
        </div>
        <span
          class="mt-auto text-lg font-bold text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
        <span
          class="mt-1 text-xs font-semibold truncate text-theme-secondary-text no-ligatures"
        >
          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Ledger"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-warning-400"
          data-testid="WalletIcon__Star"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Multisig"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__blank"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer h-48"
      data-testid="Card"
    >
      <div
        class="flex flex-col justify-between p-4 h-full"
      >
        <div
          class="flex -space-x-2"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
          />
          <div
            class="Circle-uw7h4j-0 JkqUV bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="mt-auto text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800"
        >
          Balance
        </div>
        <span
          class="mt-1 text-xs font-semibold truncate text-theme-primary-100 dark:text-theme-secondary-800"
        >
          Address
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render loading state 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer bg-theme-background"
    data-testid="Card"
  >
    <div
      class="flex relative flex-col justify-between p-4 h-full"
      data-testid="WalletCard__skeleton"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex items-center mr-4 -space-x-1"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV border-transparent"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 44px; height: 44px; border-radius: 50%;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
          <div
            class="Circle-uw7h4j-0 JkqUV border-transparent"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 44px; height: 44px; border-radius: 50%;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </div>
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 1px; height: 16px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
      <div
        class="flex items-center mt-4 space-x-1 h-7"
      >
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 1px; height: 18px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 35px; height: 18px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </div>
      <span
        class="flex items-center mt-1 h-4"
      >
        <span>
          <span
            class="flex items-center leading-none"
          >
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 1px; height: 12px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
      </span>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`Wallet Card should render with actions 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj h-48"
      data-testid="Card"
    >
      <div
        class="flex relative flex-col justify-between p-4 h-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="-space-x-2 whitespace-nowrap"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <span
            class="font-semibold truncate text-theme-secondary-text"
          >
            ARK Wallet 1
          </span>
        </div>
        <span
          class="mt-auto text-lg font-bold text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
        <span
          class="mt-1 text-xs font-semibold truncate text-theme-secondary-text no-ligatures"
        >
          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Ledger"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-warning-400"
          data-testid="WalletIcon__Star"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Multisig"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex overflow-hidden justify-center w-4"
            >
              <div
                class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                height="1em"
                width="1em"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render with wallet data 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj h-48"
      data-testid="Card"
    >
      <div
        class="flex relative flex-col justify-between p-4 h-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="-space-x-2 whitespace-nowrap"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <span
            class="font-semibold truncate text-theme-secondary-text"
          >
            My wallet
          </span>
        </div>
        <span
          class="mt-auto text-lg font-bold text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
        <span
          class="mt-1 text-xs font-semibold truncate text-theme-secondary-text no-ligatures"
        >
          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Ledger"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-warning-400"
          data-testid="WalletIcon__Star"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Multisig"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`Wallet Card should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj h-48"
      data-testid="Card"
    >
      <div
        class="flex relative flex-col justify-between p-4 h-full"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="-space-x-2 whitespace-nowrap"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <span
            class="font-semibold truncate text-theme-secondary-text"
          >
            My wallet
          </span>
        </div>
        <span
          class="mt-auto text-lg font-bold text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
        <span
          class="mt-1 text-xs font-semibold truncate text-theme-secondary-text no-ligatures"
        >
          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Ledger"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-warning-400"
          data-testid="WalletIcon__Star"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block p-1 text-theme-text"
          data-testid="WalletIcon__Multisig"
        >
          <div
            class="sc-bdfBwQ dHWxPT"
            height="16"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
